--- a/README
+++ b/README
@@ -1,9 +1,1 @@
-INSTALLATION
-=======================================
-install flask
-sudo pip install flask
-
-
-Start
-=======================================
-python init.py
+TODO
