--- a/README
+++ b/README
@@ -1,1 +1,29 @@
-TODO
+# TheNextIs
+
+A user-friendly POI search application based on the OSM database.
+
+## Development use
+
+run on the console:
+
+```
+python -m SimpleHTTPServer
+```
+
+
+
+
+## Contributing
+
+1. Fork it
+2. Create your feature branch (`git checkout -b my-new-feature`)
+3. Commit your changes (`git commit -am 'Add some feature'`)
+4. Push to the branch (`git push origin my-new-feature`)
+5. Create new Pull Request
+
+## Software used
+leaflet
+OSM
+Cloudmade
+jQuery
+Fontawesome
